Despliegue en Heroku

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,6 +31,7 @@
 
   <footer class="main" id="f1">
     <a href="http://es.wikipedia.org/wiki/Quiz">¿Qué es un Quiz?</a>
+    <a href="https://github.com/frableba/quiz.git">Enlace al proyecto en GitHub</a>
   </footer>
 </div>
 </body>
