P2PMod8: Tema de las preguntas

--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -5,7 +5,19 @@
 <table>
   <% var i; for (i=0; i < quizes.length; i++) { %>
     <tr>
-      <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+      <td>
+      <% var temaux = "Otro";
+         if (quizes[i].tema == "humanidades") {
+            temaux= "Humanidades";
+         } else if (quizes[i].tema == "ocio") {
+            temaux= "Ocio";
+         } else if (quizes[i].tema == "ciencia") {
+            temaux= "Ciencia";
+         } else if (quizes[i].tema == "tecnologia") {
+            temaux= "Tecnología";
+         }
+      %>
+      <a href="quizes/<%= quizes[i].id %>"><%=temaux%>: <%= quizes[i].pregunta %></a></td>
       <td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
       <td>
         <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
